--- a/mathblog/ag_connection.org
+++ b/mathblog/ag_connection.org
@@ -1,7 +1,7 @@
 #+TITLE:The connection between varieties and schemes: part 1
 #+DESCRIPTION:Directory
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-#+HTML_HEAD: <style> body {font-size:15px;} </style>
+#+HTML_HEAD: <style> body {font-size:15px;background-color:#FDF7D6} a {color:blue;}  </style>
 
 /Originally posted:/
 
