--- a/mathblog/derived_cat.org
+++ b/mathblog/derived_cat.org
@@ -1,7 +1,7 @@
 #+TITLE:Introduction to derived functors and derived categories
 #+DESCRIPTION:Directory
 #+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-#+HTML_HEAD: <style> body {font-size:15px;} </style>
+#+HTML_HEAD: <style> body {font-size:15px;background-color:#FDF7D6} a {color:blue;} </style>
 
 /Originally posted:/
 
@@ -36,7 +36,7 @@ and define the morphisms in the obvious way.
 some object up to isomorphism. We can unravel the definition of a universal morphism to better conceptualize it.
 In particular, a universal morphism (in $(X \downarrow F)$) is a pair $(C, f : X \rightarrow F(C))$ such that for any other pair $(C', f' : X \rightarrow F(C'))$, there is a unique arrow $h : C \rightarrow C'$ such that the following diagram commutes:
 
-#+ATTR_HTML: :width 300px
+#+ATTR_HTML: :width 250px
 [[./assets/uni_prop.png]]
 
 *Corollary 2.1.* A universal morphism is unique up to unique isomorphism in the comma category: this follows immediately from the fact that initial and terminal objects are unique up
@@ -52,15 +52,18 @@ linear map $f' : V \rightarrow \text{For}(A)$, there must be a unique algebra ho
 A good example is the tensor product. Technically, one can formulate a definition of the tensor product of two vector spaces, $V \otimes W$, via the language of universal morphisms (see [[https://ncatlab.org/nlab/show/tensor+product][nLab]]),
 but in practice, it is better to just say that $V \otimes W$ is an object of $\textbf{Vect}_k$ and a bilinear map $j : V \times W \rightarrow V \otimes W$ such that
 for any bilinear map $f : V \times W \rightarrow Z$, there is a unique morphism $h : V \otimes W \rightarrow Z$ such that $h \circ j = f$. The reason why we cannot use a universal morphism
-naively in this case is because of the /bilinear/ attribute of the maps $j$ and $f$. Nevertheless, it is easy to check directly that this definition uniquely characterizes $V \otimes W$ (if it exists)
+naively in this case is because of the /bilinear/ attribute of the maps $j$ and $f$ (we can't specify this particular attribute as native to the category in which we are
+working because we also need to work with the standard linear map $h$). Nevertheless, it is easy to check directly that this definition uniquely characterizes $V \otimes W$ (if it exists)
 up to unique isomorphism.
 
 Having introduced universal properties, we can look at a related idea: adjoint functors.
 
 *Mantra 2.1.* The best, succinct way to think of a functor $F : \mathcal{D} \rightarrow \mathcal{C}$ adjoint to functor $G : \mathcal{C} \rightarrow \mathcal{D}$ is that $F$ is the most efficient way to systematically
 "solve the problem" posed by $G$. If $G$ is, for example, a forgetful functor which throws away some of the structure of category $\mathcal{C}$, is there a method which reconstructs an element of $\mathcal{C}$ from $\mathcal{D}$, and imposes the
-minimal amount of extra structure possible? If such a method exists, and is functorial, in the sense that it works the same for any object, then it can be described via a functor $F : D \rightarrow C$
-which is adjoint to $G$. Another way to internalize this saame intuition is via universal properties. When
+minimal amount of extra structure possible? If such a method exists, and is functorial, in the sense that it works the same for any object, then it can be described via a functor $F : \mathcal{D} \rightarrow \mathcal{C}$
+which is adjoint to $G$.
+
+*Mantra 2.2.* Another way to internalize this same intuition is via universal properties. When
 we find an object which satisfies a universal property, we are effectively finding the "most efficient" object which satisfies some desired property. An adjoint functor is a technique to define such universal
 objects at a global, categorical level, rather than locally. To be more specific, writing down a universal morphism is dependent on a /particular choice/ of object $X$ relative to which we define a comma category.
 One way to interpret the utility of an adjoint functor is that it "chooses every $X$ at once" in a functorial manner. In the previous tensor algebra example, we are choosing a particular $X = V$, and defining $T(V)$
@@ -80,24 +83,88 @@ in $(X \downarrow G)$. We define functor $F : \mathcal{D} \rightarrow \mathcal{C
 and the corresponding induced functor is $F$. Similarly, if $G : \mathcal{C} \rightarrow \mathcal{D}$ is right-adjoint and $F$ is the induced functor, then $F$ is left-adjoint, and its
 induced functor is $G$.
 
-/Proof./ Let's look at the first case. We need to show that for each $X$ in $\mathcal{D}$, then $(F(X), f : X \rightarrow G(F(X)))$ is initial
-in the comma category, for some arrow $f$ in $\mathcal{D}$. Of course, we know that $F$ is left-adjoint with induced functor $G$, so we can find universal morphism in $(F \downarrow F(X))$. This will be
-some terminal $(G(F(X)), h : F(G(F(X))) \rightarrow F(X))$. 
+/Proof./ Let's look at the first case. We need to show that for each $X$ in $\mathcal{D}$, then there is initial object $(F(X), f_X : X \rightarrow G(F(X)))$
+in the comma category. Thus, we need to produce a unique arrow $g : F(X) \rightarrow Y$ for some $(Y, h : X \rightarrow G(Y))$
+such that $G(g) \circ f_X = h$. Of course, we know that $F$ is left-adjoint with induced functor $G$, so we can find universal morphism in $(F \downarrow Y)$. This will be
+some terminal $(G(Y), g_Y : F(G(Y)) \rightarrow Y)$. So, given $(Z, p : F(Z) \rightarrow Y)$, we have unique $p' : Z \rightarrow G(Y)$ such that $g_Y \circ F(p') = p$.
+In particular, we can set $Y = F(X)$ and $Z = X$ with $p = \text{id}$, to get $p' : X \rightarrow G(F(X))$ where $g_{F(X)} \circ F(p') = \text{id}$. In addition, recall
+that $g_Y$ satisfies the naturality condition:
 
-*Example 2.3* (Tensor algebra, again). If $T(V)$ (the tensor algebra of Example 2.2) exists
+\begin{equation}
+g_Y \circ (F \circ G)(p) = p \circ g_{Y'}
+\end{equation}
 
-*Example 2.4* (Free products).
+for every $p : Y' \rightarrow Y$. We claim that we can set $f_X = p'$. Then, given $(Y, h : X \rightarrow G(Y))$, consider $g_Y \circ F(h)$: we claim that this is the $g$ we need.
+Then we have arrow $G(g) \circ f_X = G(g_Y) \circ G(F(h)) \circ p'$, and applying $F$ gives us $(F \circ G)(g_Y) \circ (F \circ G)(F(h)) \circ F(p')$.
+From the naturality condition,
 
-Now, let us discuss the notion of limits and colimits, which will prove to be useful in our discussion of Abelian categories.
+\begin{equation}
+g_Y \circ F(h) \circ g_{F(X)} = g_Y \circ g_{(F \circ G)(Y)} \circ (F \circ G)(F(h)) = g_Y \circ (F \circ G)(g_Y) \circ (F \circ G)(F(h))
+\end{equation}
 
-*Definition* (Cone).
+where the final equality comes from the naturality condition for $p = g_Y$. It follows that
+
+\begin{equation}
+g_Y \circ F(G(g_Y \circ F(h)) \circ p') = g_Y \circ (F \circ G)(g_Y) \circ (F \circ G)(F(h)) \circ F(p') = g_Y \circ F(h) \circ g_{F(X)} \circ F(p') = g_Y \circ F(h)
+\end{equation}
+
+and by uniqueness, $h = G(g_Y \circ F(h)) \circ p'$, or in other words, $G(g) \circ f_X = h$, as desired. Thus, $G$ is right-adjoint with induced functor $F$. Proving the second case
+is follows more or less the same process, so we will omit the proof. $\blacksquare$
+
+*Example 2.3* (Tensor algebra, again). The forgetful functor $\text{For} : \textbf{Alg}_k \rightarrow \textbf{Vect}_k$ of Example 2.2 is right-adjoint (if the tensor algebra $T(V)$ exists). In particular, we have
+initial $(T(V), f : V \rightarrow \text{For}(T(V)))$ for each $V \in \text{Obj}(\textbf{Vect}_k)$, which is a universal morphism in $(V \downarrow \text{For})$.
+
+--------------
+
+Now, let us discuss the notion of limits and colimits, which will prove to be useful in our discussion of Abelian categories. Similar to universal morphisms and adjoints, we can think
+of limits and colimits as particular initial/terminal objects in a category.
+
+*Definition* (Diagram). A $\mathcal{D}$ -shaped diagram in $\mathcal{C}$ is a functor $F : \mathcal{D} \rightarrow \mathcal{C}$.
+We can form a category of $\mathcal{D}$ -shaped diagrams in $\mathcal{C}$, $\mathcal{D}[\mathcal{C}]$, by taking these functors are objects, and natural transformations as arrows.
+
+*Definition* (Cone). If $F : \mathcal{D} \rightarrow \mathcal{C}$ is a $\mathcal{D}$ -shaped diagram in $\mathcal{C}$, and $Y$ is an object in $\mathcal{C}$, we define a cone from $Y$ to $F$ to be a collection of morphisms
+$\psi_X : Y \rightarrow F(X)$  for each object $X$ in $\mathcal{C}$, such that the following diagrams commute:
+
+#+ATTR_HTML: :width 250px
+[[./assets/cone.png]]
+
+for each arrow $f : X \rightarrow X'$. Similarly, we define a cone from $F$ to $Y$ (also called a co-cone) by reversing all arrows in the above diagram. One can also formulate cones in terms of an appropriate comma category,
+if they wish. The category of cones to $F$ takes cones from some object to $F$ as objects, and as morphisms, arrows $g : Y' \rightarrow Y$ in $\mathcal{C}$ making the following diagrams commute:
+
+#+ATTR_HTML: :width 250px
+[[./assets/cone_morphism.png]]
+
+with the category of co-cones (or cones from $F$) being defined by again reversing the arrows in the above diagram. Checking that these are categories is easy.
+
+*Definition.* If $F : \mathcal{D} \rightarrow \mathcal{C}$ is a diagram, a limit $\lim F$ is an initial object in the category of cones going to $F$.
+Similarly, a colimit $\text{colim} \ F$ is a final object in the category of cones going from $F$. For a more detailed explanation of
+limits and colimits, and how they are categorical generalizations of inverse limits and direct limits, see [[https://lucaman99.github.io/mathblog/groupoid_svk.html][my previous blog post]].
+
+Using limits and colimits, we are able to define an /equalizer/ within a category, which can be thought of as a categorical generalization of "the set of arguments where
+two functions agree".
+
+*Definition.* Let $\mathcal{C}$ be a category, let $X$ and $Y$ be objects, and let $f, g : X \rightarrow Y$ be arrows. Taking $X$ and $Y$ as objects, $f$, $g$, and the identity arrows as morphisms,
+we form a subcategory, and if we let $\mathcal{D} = \{1, 2\}$ with arrows $a$ and $b$ pointing from $1$ to $2$ (along with identity arrows), we easily can form a diagram $F : \mathcal{D} \rightarrow \mathcal{C}$ sending
+$a$ to $f$ and $b$ to $g$. The equalizer $\text{Eq}(f, g)$ is $\lim F$. Unpacking this definition, the equalizer is an object $C \in \mathcal{C}$ and maps
+$\psi_X : C \rightarrow X$ and $\psi_Y : C \rightarrow Y$ such that $g \circ \psi_X = \psi_Y = f \circ \psi_x$ which satisfy the required universal property. Similarly,
+the coequalizer $\text{Coeq}(f, g)$ is $\text{colim} \ F$.
+
+*Remark.* One can immediately see how this generalizes the notion of "the set on which two functions are equal". Being sloppy and abusing notation, we can have $C = \{(x, y) \ | \ y = f(x) = g(x)\}$,
+$\psi_X$ the projection onto the first argument, and $\psi_Y$ projection onto the second: then $C$ satisfies the desired criterion. Ignore this remark is you find it too hand-wavy.
 
 To conclude, let us briefly introduce the notion of products and coproducts, which are another crucial component of Abelian categories.
 
+*Definition.* Let $\mathcal{C}$ and $\mathcal{D}$ be categories, where $\mathcal{D}$ is an "index set" (i.e. it has no non-identity morphisms), and consists of set of objects $I$. Suppose
+$F : \mathcal{D} \rightarrow \mathcal{C}$ is a diagram, which simply amounts to choosing some indexed family $(X_i)_{i \in I}$ of objects $X_i$ in $\mathcal{C}$. Then a product of the $X_i$
+is a limit of $F$. Unrolling this definition, it is object $C$ in $\mathcal{C}$, along with morphisms $\pi_i : C \rightarrow X_i$ (projections) which is initial in the cone category.
+Similarly, a coproduct is a colimit of $F$.
+
 * Abelian categories
 
-Here, we will develop some central results revolving around /Abelian categories/, which were introduced by Grothendieck in his (famous) Tohoku paper, and provide the
+Here, we will develop some central results revolving around /Abelian categories/, which were introduced by Grothendieck in his Tohoku paper, and provide the
 arena in which it makes sense to talk about exact sequences, homology, and cohomology is a general, categorical sense.
+
+We need to begin with a lot of definitions (basically a collection of categorical generalizations of things which come up frequently in algebra).
 
 *Definition 3.1* (Preadditive category). A preadditive category $C$ is a category such that each hom-set has the structure of an Abelian group, with composition being bilinear over the group addition:
 \begin{align}
@@ -108,7 +175,7 @@ arena in which it makes sense to talk about exact sequences, homology, and cohom
 An arrow is said to be /coconstant/ if for any morphisms $g, h : Y \rightarrow Z$, we have $g \circ f = h \circ f$. A morphism which is both constant and coconstant is called a /zero morphism/. We say that $C$ is a category
 /with zero morphisms/ such that for every two objects $X$ and $Y$, there is a morphism $0_{XY} : X \rightarrow Y$ such that for any two arrows $f : X \rightarrow Y$ and $g : Y \rightarrow Z$, the following diagrams commute:
 
-#+ATTR_HTML: :width 300px
+#+ATTR_HTML: :width 250px
 [[./assets/zeros.png]]
 
 *Remark 3.1.* Note that if $\mathcal{C}$ is a category with zero morphisms, then the arrows $0_{XY}$ are unique. To see this, let $Z = Y$, let $g = \text{id}$, let $f = 0_{XY}'$: some other morphism
@@ -131,10 +198,66 @@ $f$ and $0_{XY}$. In addition, $\text{Coker}(f) = \text{Coeq}(f, 0_{XY})$, the c
 we have object $Q$ and "quotient" morphism $q : Y \rightarrow Q$. Intuitively, if $Q$ is supposed to generalize $Y/\text{Im}(f)$ in the case that we are operating in, say, the category of vector spaces,
 then we should have $\text{Ker}(q) \simeq \text{Im}(f)$ (this is just the first isomorphism theorem). Thus, we /define/ $\text{Im}(f) = \text{Ker}(q)$.
 
+*Definition 3.5* (Biproducts). Let $\mathcal{C}$ be a category with zero morphisms. Let $X_1, \dots, X_n$ be a collection of objects in $\mathcal{C}$, a biproduct of
+these objects is an object $X_1 \oplus \cdots \oplus X_n$ and morphisms $p_k : X_1 \oplus \cdots \oplus X_n \rightarrow X_k$ (projections) and $i_k : X_k \rightarrow X_1 \oplus \cdots \oplus X_n$ (embeddings) which satisfy:
+  
+- $p_k \circ i_k = 1_k$, the identity arrow on $X_k$
+- $p_{\ell} \circ i_k = 0_{k \ell}$, the zero morphism from $X_k$ to $X_{\ell}$.
+  
+In addition, we require that $(X_1 \oplus \cdots \oplus X_n, p_k)$ is a product of the objects $X_k$ and that $(X_1 \oplus \cdots \oplus X_n, i_k)$ is a coproduct.
+
+*Definition 3.6.* A morphism $f : X \rightarrow Y$ is said to be a monomorphism if $f \circ g = f \circ h$ implies $g = h$ for any arrows $g$ and $h$.
+A morphism is said to be an epimorphism if $g \circ f = h \circ f$ implies $g = h$ for any $g$ and $h$. A monomorphism is said to be /normal/
+if it is the kernel of some morphism. An epimorphism is said to be /conormal/ if it is the cokernel of some morphism.
+
+We can now (finally) define Abelian categories:
+
+*Definition 3.7* (Abelian category). An Abelian category $\mathcal{C}$ is a preadditive category which satisfies the following criteria:
+
+- $\mathcal{C}$ has a zero object.
+- $\mathcal{C}$ contains all binary biproducts (i.e. biproducts of two objects, thus biproducts of a finite number of objects).
+- $\mathcal{C}$ contains all kernels and cokernels.
+- Every monomorphism in $\mathcal{C}$ is normal, every epimorphism is conormal.
+
+Operating in the realm of Abelian categories allows us to prove many, generic results, some of which are recognizable from basic algebra.
+
+*Definition 3.8.* If $\mathcal{C}$ is an Abelian category, a sequence of morphisms indexed by integers $\cdots \rightarrow X^{j - 1} \rightarrow X^j \rightarrow X^{j + 1} \rightarrow \cdots$
+is said to be a cochain complex if the composition of neighbouring arrows is the unique zero morphism between the objects. A chain complex is exactly the dualized version of the chain
+complex that we would expect.
+
+*Definition 3.9* (Cohomology and homology). We will focus here on the case of cohomology, rather than homology, as for our purposes, it is more important.
+Let $\mathcal{C}$ be an Abelian category, consider a cochain complex
+
+#+ATTR_HTML: :width 350px
+[[./assets/cochain.png]]
+
+which we denote by $X^{\bullet}$, where we have $d^{j + 1} \circ d^j : X^j \rightarrow X^{j + 2}$ equal to the zero morphism from $X^j$ to $X^{j + 2}$.
+Of course, the data of $\text{Ker}(d^j)$ is an object $K^j$ and a map $i^j : K \rightarrow X^j$ (and inclusion arrow). We then define $u^j$ via the universal property which $i^j$ and $K^j$ satisfy:
+
+#+ATTR_HTML: :width 250px
+[[./assets/universal_co.png]]
+
+One should think of this arrow as restricting the target of $d^{j - 1}$ to the kernel $K^j$, as due to the fact that $d^j \circ d^{j - 1}$ is the zero morphism, it makes sense
+to do this. From here, we take $H^j(X^{\bullet}) = \text{Coker}(u^j)$: this is the $j$ -th cohomology of $X^{\bullet}$. Informally, one can think of this as "the kernel of $d^j$
+modulo the image of $d^{j - 1}$", which is the standard definition of cohomology when working with Abelian groups. In addition, if we have a collection of morphisms between terms of
+cochain complexes $X^{\bullet}$ and $Y^{\bullet}$, $f^j : X^j \rightarrow Y^j$,
+
+#+ATTR_HTML: :width 350px
+[[./assets/co_morphism.png]]
+
 * Derived functors
+
+Now that we've cleared up the preliminaries, let us dive into the theory of derived functors. We will follow some nice [[https://www.math.toronto.edu/%7Ejacobt/Lecture12.pdf][lecture notes]] prepared by Jacob Tsimerman for a course on etale cohomology, filling in details.
+Within Abelian categories, one has a well-defined notion of a short exact sequence. In particular, we say that the sequence of morphisms
+
+
+#+ATTR_HTML: :width 350px
+[[./assets/short_exact.png]]
 
 * Derived categories
 
 * Sheaf cohomology and hypercohomology
 
 * Hochschild homology and cohomology
+
+As a final (fun) application of the theory of derived functors and derived categories, let us discuss a very natural formulation of Hochschild homology and cohomology for algebras over rings.
