--- a/mathblog/fibre_integrals.org
+++ b/mathblog/fibre_integrals.org
@@ -1,19 +1,151 @@
-#+TITLE:Fibre integrals
-#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="https://gongzhitaao.org/orgcss/org.css"/>
-#+HTML_HEAD: <style> body {font-size:15px;} </style>
+#+TITLE:Fibre integrals and the Thom isomorphism
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="../../org.css"/>
+#+HTML_HEAD: <style> body {font-size:15px;background-color:#FDF7D6;} a {color:blue;} </style>
 
-/Originally published: May 5th, 2025/
+/Originally published: May 5th, 2025/, /Updated: September 8th, 2025/
 
 ---------
 
-Today, I want to briefly go over the formal definition of a fibre integral, a very useful construction which is sometimes invoked a bit flippantly in some differential topology proofs (Bott and Tu, I'm looking at you).
+Today, I want to briefly go over the formal definition of a fibre integral, a very useful construction which is sometimes invoked a bit flippantly in some differential topology proofs.
 The idea is that, given a differential form on the entire space of a fibre bundle, one should be able to "integrate out" the vertical part of the form along the fibres, yielding a form on the base space.
+
+*Note:* This blog post was updated on September 8th, 2025 to fix a few issues and add (quite a bit) of additional information.
 
 * Basics
 
-Let $\pi : E \rightarrow B$ be a smooth fibre bundle, let $\alpha$ be a $k$ -form
-on $E$. Of course, $\pi$ is locally a projection to base, and is thus a submersion. It follows that the fibres $\pi^{-1}(b)$ will be $\dim(E) - \dim(B) = e - b = n$ dimensional submanifolds for all $b \in B$.
-Assume that they are compact oriented, and assume that $k > n$.
+The first order of business will be proving a generalization of the regular value submanifold
+theorem which apply to manifolds with boundary, as we will be defining fibre integrals for manifolds with and without boundary.
+
+*Lemma.* If $M$ is a smooth manifold without boundary and $f : M \rightarrow \mathbb{R}$ is smooth, with regular values $a$ and $b$, then $S = f^{-1}([a, b])$ is an embedded submanifold
+with boundary of $M$ of equal dimension to $M$. Moreover, the boundary of $S$ is $f^{-1}(a) \sqcup f^{-1}(b)$.
+
+/Proof./ Let $n = \dim(M)$. Consider first the subspace $f^{-1}(a)$. Since $a$ is a regular value, for some $p \in f^{-1}(a)$, pick some charts $(U, \varphi)$ around
+  $p$ and $(V, \psi)$ around $a$ so that $\psi \circ f \circ \varphi^{-1}$ is projection to the last coordinate. Obviously, $a \in V$, so without loss of generality, let $V = (a - \varepsilon, a + \varepsilon)$.
+  We also assume that $U \subset f^{-1}((a - \varepsilon, a + \varepsilon))$. It then follows that
+  \begin{align}
+    \varphi(U \cap f^{-1}([a, b])) &= \{ \varphi(x) \in \varphi(U) \ | \ (f \circ \varphi^{-1})(\varphi(x)) \in [a, a + \varepsilon) \}
+      \\ &= \{(y^1, \dots, y^n) \in \varphi(U) \ | \ y^n \in \psi([a, a + \varepsilon))\}
+  \end{align}
+  Since $\psi : (a - \varepsilon, a + \varepsilon) \rightarrow \widetilde{U}$ is a homeomorphism, $\widetilde{U} \subset \mathbb{R}$ is connected, and is therefore an open interval, $(b_0, b_1)$.
+  We also must have $a \pm \varepsilon$ sent to the endpoints, so $[a, a + \varepsilon)$ will be sent to either $[c, b_1)$ or $(b_0, c]$ for $c = \psi(a)$, so $\varphi(U \cap f^{-1}([a, b]))$
+  is the set of all $(y^1, \dots, y^n) \in \varphi(U)$ such that $y^n \geq c$ or $y^n \leq c$. In the former case, we have
+  \begin{equation}
+    \varphi(U \cap f^{-1}([a, b])) = \varphi(U) \cap \{ (s^1, \dots, s^n) \in \mathbb{R}^n \ | \ s^n \geq c\}
+    \end{equation}
+  so we can simply re-define $\varphi$ to $\widetilde{\varphi}(x) = \varphi(x) - (0, \dots, 0, c)$, which is also a valid coordinate chart, and
+  \begin{align}
+    \widetilde{\varphi}(U \cap f^{-1}([a, b])) &= \left[ \varphi(U) \cap \{ (s^1, \dots, s^n) \in \mathbb{R}^n \ | \ s^n \geq c\} \right] - (0, \dots, 0, c)
+    \\ &= \widetilde{\varphi}(U) \cap \mathbb{H}^n
+    \end{align}
+  so that $\widetilde{\varphi}$ is a valid boundary slice chart. The latter case follows similarly. It is clear that every $p \in f^{-1}((a, b))$ is contained in a standard coordinate chart for $M$, and we can apply
+  a similar strategy for $q \in f^{-1}(b)$ to get boundary slice coordinate charts here.
+
+*Remark.* Clearly, we also have a variant of this lemma when $[a, b]$ is replaced with $[a, b)$, following the same proof. In this case, the boundary is simply $f^{-1}(a)$.
+
+*Theorem.* If $f : M \rightarrow N$ is a map from smooth manifold with boundary $M$ to smooth manifold without boundary $N$, and if $c \in N$ is a regular value of both $f$ and $f|_{\partial M}$, then
+$S = f^{-1}(c)$ is a smooth submanifold with boundary, and $\partial S = \partial M \cap S$.
+
+/Proof./ To begin, note that by smoothness of $f$, we can pick boundary chart $(U, \varphi)$ around some $p \in \partial M \cap S$ in $M$ (assume $\varphi(p) = (0, \dots, 0)$)
+  and chart $(\psi, V)$ around $c$ in $N$ (assume $\psi(c) = (0, \dots, 0)$) such that
+  $\psi \circ f \circ \varphi^{-1}$ admits a smooth extension to $\widetilde{f}$ on open $W \subset \mathbb{R}^m$ around the origin.
+  We can shrink $W$ to be small enough
+  so that $\widetilde{f}$ is a submersion, as $f$ is regular at $p$, so $\psi \circ f \circ \varphi^{-1}$ is regular at $\varphi(p) = (0, \dots, 0)$,
+  so $\widetilde{f}$ is as well, and
+  thus is regular in some neighbourhood of the origin. Additionally, we know that $f|_{U \cap \partial M} = f|_{\partial U}$ is regular at $p$. We also know that $\varphi^{-1} : \varphi(U) \rightarrow U$
+  is a diffeomorphism and restricts to a diffeomorphism of the boundaries, so
+  $(\psi \circ f \circ \varphi^{-1})|_{\partial \varphi(U)}$ must be regular at $\varphi(p)$, which implies that
+  \begin{equation}
+  \widetilde{f}|_{W \cap \partial \varphi(U)} = (\psi \circ f \circ \varphi^{-1})|_{W \cap \partial \varphi(U)}
+  \end{equation}
+  is regular at $\varphi(p)$, as $W \cap \partial \varphi(U)$ is an open submanifold of $\partial \varphi(U)$. Thus, $\widetilde{f}|_{W \cap \partial \varphi(U)}$ is regular
+  in some neighbourhood of $\varphi(p)$ in $W \cap \partial \varphi(U)$, so we can shrink $W$ even more to assume this is the case on $W \cap \partial \varphi(U)$ itself.
+  Finally, we define $\widetilde{U}$ to be $\varphi^{-1}(W) \subset U$, so that $\varphi(\widetilde{U}) = W \cap \mathbb{H}^n$, and $\widetilde{f}$ and
+  $\widetilde{f}|_{\partial \varphi(\widetilde{U})}$
+  are both submersions.
+
+  We know that $\widetilde{S} = \widetilde{f}^{-1}(0, \dots, 0) \subset \mathbb{R}^n$ is an embedded
+  submanifold of dimension $m - n$. Let $\pi : W \rightarrow \mathbb{R}$
+  be the map which projects onto the last coordinate. Of course, $\varphi(\widetilde{U}) = \pi^{-1}([0, \infty))$. Note that
+  \begin{equation}
+    (\pi|_{\widetilde{S}})^{-1}([0, \infty)) = \pi^{-1}([0, \infty)) \cap \widetilde{f}^{-1}(0, \dots, 0) = \varphi(\widetilde{U} \cap f^{-1}(c)) = \varphi(\widetilde{U} \cap S)
+    \end{equation}
+  If we can show that $0$ is a regular value of $\pi|_{\widetilde{S}}$, then we can apply the previous lemma to conclude that $\varphi(\widetilde{U} \cap S)$ is an embedded
+  submanifold with boundary $(\pi|_{\widetilde{S}})^{-1}(0) = \varphi(S \cap \partial \widetilde{U})$. It then follows that $\widetilde{U} \cap S$ will be embedded
+  submanifold with boundary $S \cap \partial \widetilde{U}$.
+  Repeating this argument at all $p \in \partial M \cap S$, and using standard arguments for $p \in \text{Int}(M) \cap S$ show that $S$ is a submanifold
+  with boundary with $\partial S = \partial M \cap S$.
+
+  So, let's prove the final thing. Of course, $\pi^{-1}(0)$ is a
+  submanifold of $W$ of dimension $m - 1$, and  $\widetilde{f}|_{\partial \varphi(\widetilde{U})} = \widetilde{f}|_{\pi^{-1}(0)}$.
+  Let $j : \pi^{-1}(0) \rightarrow W$ be the inclusion map, so $\widetilde{f}|_{\pi^{-1}(0)} = \widetilde{f} \circ j$.
+  We will then have
+  $\dim \text{Im}(\widetilde{f}_{*} \circ j_{*}) = n$ everywhere on $\pi^{-1}(0) \subset W$, by the fact that this map is a submersion. It then follows from rank-nullity that
+  \begin{equation}
+    \dim \text{Ker}(\widetilde{f}_{*} \circ j_{*}) = m - n - 1
+    \end{equation}
+  If $0$ isn't a regular value of $\pi|_{\widetilde{S}}$, then we must be able to choose some $q \in \widetilde{S} \cap \pi^{-1}(0)$ such that all of the tangent vectors in
+  $T_q \widetilde{S} = \text{Ker}(\widetilde{f}_{*, q})$ are tangent to $\pi^{-1}(0)$. In other words, the kernel of $\text{Ker}(\widetilde{f}_{*, q}) \subset \text{Im}(j_{*, q})$.
+  It follows that
+  $j_{*, q}$ yields an isomorphism of $\text{Ker}(\widetilde{f}_{*, q} \circ j_{*, q})$ and $\text{Ker}(\widetilde{f}_{*, q})$, so they would have the same dimension. But we know that
+  \begin{equation}
+    \dim \text{Ker}(\widetilde{f}_{*, q}) = \dim T_q \widetilde{S} = m - n
+    \end{equation}
+  which is a contradiction, as the dimensions are not the same. Thus, $0$ is, in fact, a regular value of $\pi|_{\widetilde{S}}$, and the proof is finally complete.
+
+------------
+
+Another basic thing I'd like to define before getting into the fibre integrals is the idea of an /oriented fibre bundle/.
+
+*Definition.* If $\pi : E \rightarrow B$ is a smooth fibre bundle with fibre $F$ is said to be oriented as a fibre bundle if each submanifold $\pi^{-1}(p) = E_p$, as well as $F$,
+is endowed with an orientation, and
+we have a trivialization of the bundle with maps $\Phi_U : \pi^{-1}(U) \to U \times F$ which are orientation-preserving diffeomorphisms when restricted to any fibre.
+In the specific case that $E$ is a real vector bundle, we automatically equip the model fibre $F = \mathbb{R}^n$ with the standard orientation.
+
+*Claim.* A manifold $M$ is orientable (in the usual sense) if and only if its tangent bundle $TM$ is orientable as a fibre bundle (with fibre $\mathbb{R}^n$).
+Note that $TM$ is alway orientable /as a manifold/ in its own right.
+
+/Proof./ If $M$ is orientable, then it admits a continuous pointwise orientation, which is to say that each fibre $T_p M$ admits an orientation $\mu_p$ such that in a neighbourhood $U$ of every
+point, there is a smoothly-varying frame $Y_1, \dots, Y_n$ which gives the orientation in $U$. It follows that at $q$, we have orientation $[Y_{1, q}, \dots, Y_{n, q}]$ for the fibre $T_q M$,
+and trivialization $\Phi_U$ which takes tangent vector $v_q$ to its components with respect to the frame of the $Y_{j, q}$. Thus, the restriction of $\Phi_U$ to a fibre $T_q M$ is the linear map
+taking $Y_{j, q}$ to $e_j$, and hence is orientation-preserving when $\mathbb{R}^n$ is equipped with the standard orientation.
+
+The converse follows from the fact that the trivializations $\Phi_U : \pi^{-1}(U) \to U \times \mathbb{R}^n$ immediately give us
+smoothly-varying frame consisting of $\Phi_U^{-1}((p, e_j))$ for $p \in U$ and $j = 1, \dots, n$ which give the pointwise orientation on each $T_q M$. $\blacksquare$
+
+*Claim.* If $\pi : E \rightarrow B$ is an oriented fibre bundle, and $B$ is itself oriented, then there is a natural induced orientation on $E$.
+
+/Proof./ We will write down an oriented atlas for $E$. Pick oriented atlas $(U_{\alpha}, \varphi_{\alpha})$ for $M$ such that each $U_{\alpha}$ is trivialized
+by $\Phi_{\alpha} : \pi^{-1}(U_{\alpha}) \rightarrow U_{\alpha} \times F$ which is orientation-preserving when restricted to fibres. Let $(V_{\beta}, \psi_{\beta})$
+be an oriented atlas for $F$. Then our claim is that $(\Phi_{\alpha}^{-1}(U_{\alpha} \times V_{\beta}), (\varphi_{\alpha} \times \psi_{\beta}) \circ \Phi_{\alpha})$
+is an oriented atlas for $E$. We note that the determinant of the transition function Jacobians are of the form
+
+\begin{align}
+\det D \left( (\varphi_{\alpha} \times \psi_{\beta}) \circ \Phi_{\alpha} \circ \Phi_{\alpha'}^{-1} \circ (\varphi_{\alpha'} \times \psi_{\beta'})^{-1} \right) &= \det D(\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1})
+\det D( (\varphi_{\alpha} \circ \varphi_{\alpha'}^{-1}) \times (\psi_{\beta} \circ \psi_{\beta'}^{-1}))
+\\ &= \det D(\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1}) \det D(\varphi_{\alpha} \circ \varphi_{\alpha'}^{-1}) \det D(\psi_{\beta} \circ \psi_{\beta'}^{-1})
+\end{align}
+
+The final two determinants in the product are positive, as we chose oriented charts. Moreover, note that $(\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1})(s, f) = (s, f')$
+for some $f'$ depending on both $s$ and $f$. Thus, the Jacobian is of the form
+
+\begin{equation}
+D(\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1}) = \begin{pmatrix} \mathbb{I} & 0 \\ A & B \end{pmatrix}
+\end{equation}
+
+where $B$, is the derivative of the transition function when we restrict to a fibre. In particular, $\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1}$ restricted to $F$ is an orientation-preserving
+map from $F$ to itself, and thus has a positive Jacobian determinant, so $\det(B)$ is positive, and from the above formula, $\det D(\Phi_{\alpha} \circ \Phi_{\alpha'}^{-1})$ is positive as well. $\blacksquare$
+
+*Remark.* A fibre bundle over an oriented manifold is not necessarily orientable: just look at the example of the Mobius band (as a fibre bundle over a circle, which is orientable).
+We require the assumption that the fibre bundle itself is orientable (as a fibre bundle).
+
+------------
+
+Let $\pi : E \rightarrow B$ be a smooth fibre bundle (where $E$ is allowed to have boundary but $B$ is /not/).
+Of course, $\pi$ is locally a projection to base, in the sense that for any $p \in B$, there exists open
+set $U$ around $p$ and a diffeomorphism $\varphi : \pi^{-1}(U) \to U \times F$ such that $\text{proj} \circ \varphi = \pi$. Therefore, locally, we can study the projection map from $U \times F$ to $U$ and the
+restriction to boundary, projection from $U \times \partial F$ to $U$. Both maps are submersions, so it follows from the above theorem that the fibres $\pi^{-1}(b)$ will be $\dim(E) - \dim(B) = e - b = n$
+dimensional submanifolds for all $b \in B$, with boundary given by their intersection with the boundary of $E$. Assume that $k > n$. We assume, moreover, that $E$ is an /oriented/ fibre bundle. Let $\alpha$ be a $k$ -form on $E$ with
+vertical compact support, which is to say that if $\iota_b : \pi^{-1}(b) \to E$ is the inclusion of a fibre, then $\iota_b^{*} \alpha$ is compact. This of course holds if $\alpha$ just has compact support outright.
 
 *Claim.* Let $\pi : E \rightarrow B$ be a smooth submersion, let $X$ be a smooth vector field on $B$. Then there exists a smooth vector field $\widetilde{X}$ on $E$ such that $\pi_{*, p}(\widetilde{X}_p) = X_{\pi(p)}$
 for all $p \in E$.
@@ -23,7 +155,7 @@ is a projection. Write $X$ in $V$ as $\sum_{j = 1}^{m} X^j \frac{d}{dy^j}$ and d
 and then combine via a partition of unity subordinate to the cover $\varphi_{\alpha}$ to obtain $\widetilde{X}$. $\blacksquare$
 
 From here, let $v_1, \dots, v_{k - n}$ be tangent vectors at some $b \in B$. We can extend them to vector fields and lift via the above claim to obtain vector fields in $E$, $\widetilde{v_j}$. Let $\beta$ be the
-$n$ -form obtained from contracting $\alpha$ with the lifted vector fields. Restrict $\beta$ to submanifold $\pi^{-1}(b)$, on which it is a top-form on an oriented compact manifold. We then define the map
+$n$ -form obtained from contracting $\alpha$ with the lifted vector fields. Restrict $\beta$ to submanifold $\pi^{-1}(b)$, on which it is a top-form with compact support on an oriented manifold. We then define the map
 $\pi_{*} \alpha : T_b B \times \cdots \times T_b B \rightarrow \mathbb{R}$ as
 
 \begin{equation}
@@ -53,9 +185,13 @@ will always yield $0$, as we will always have a repeated index (particularly, th
 form $\frac{d}{d\widetilde{y}^j}$). Thus, $\beta_p = 0$ for all $p \in \pi^{-1}(b)$, in this case. This immediately proves that our map is well-defined, independent
 of the chosen extension and lift of $v_1, \dots, v_{k - n}$, via multilinearity of the differential form.
 
-Finally, let us prove smoothness. The chart
+Finally, let us prove smoothness.
+
+*Remark.* This is where we will actually use the full strength of the assumption that $E$ is an oriented fibre bundle.
+
+The chart
 $(W, (\varphi \times \psi) \circ \Phi)$ around $z$ gives rise to the chart around $z$ for $\pi^{-1}(b)$, $(W \cap \pi^{-1}(b), \theta) = (W \cap \pi^{-1}(b), \widetilde{y}^1 \circ \iota_b, \dots, \widetilde{y}^n \circ \iota_b)$. We can
-write $\beta$, a smooth form on $E$, as $\beta = \sum_{I, J} C_{I, J} d\widetilde{x}^I \wedge d\widetilde{y}^J$. It then follows that
+write $\beta$, a smooth form on $E$, as $\beta = \sum_{I, J} C_{I, J} d\widetilde{x}^I \wedge d\widetilde{y}^J$. We can also assume that $\Phi$ is orientation-preserving when restricted to each fibre. It then follows that
 
 \begin{equation}
 (\iota_b^{*} \beta)_{\Phi^{-1}(b, f)} = \sum_{I, J} (C_{I, J} \circ \Phi^{-1})(b, f) \iota_b^{*} d\widetilde{x}^I \wedge \iota_b^{*} d\widetilde{y}^J
@@ -65,10 +201,10 @@ write $\beta$, a smooth form on $E$, as $\beta = \sum_{I, J} C_{I, J} d\widetild
 where all terms with non-trivial $d\widetilde{x}^I$ are eliminated when pulled-back by $\iota_b$, as the functions $\widetilde{x}^j \circ \iota_b$ are constant. We have the diffeomorphism
 $\Phi : W \rightarrow \Phi(W) \subset U \times F$. Inside $U \times F$, we have submanifold $\{b\} \times V$ and the smooth embedding $\Phi \circ \iota_b$ from submanifold $W \cap \pi^{-1}(b)$
 to $\{b\} \times V$. These manifolds are of the same dimension, so this is actually a diffeomorphism, and as a result, we have a diffeomorphism of $V$ with $W \cap \pi^{-1}(b)$, where we take
-$f$ to $\Phi^{-1}(b, f)$. Call this diffeomorphism $\Psi$. We have
+$f$ to $\Phi^{-1}(b, f)$. Call this diffeomorphism $\Psi$. By assumption, this diffeomorphism is always orientation-preserving. We then have
 
 \begin{equation}
-\int_{\pi^{-1}(b) \cap W} \iota_b^{*} \beta = \int_{V} (\Psi)^{*} \iota_b^{*} \beta = \int_F (C \circ \Phi^{-1})(b, \cdot) dy^1 \wedge \cdots \wedge dy^n
+\int_{\pi^{-1}(b) \cap W} \iota_b^{*} \beta = \int_{V} (\Psi)^{*} \iota_b^{*} \beta = \int_V (C \circ \Phi^{-1})(b, \cdot) dy^1 \wedge \cdots \wedge dy^n
 \end{equation}
 
 The right hand side will clearly be smooth in $b$, as in coordinates, we can always differentiate under the integral sign. The integral over all of $\pi^{-1}(b)$ is
@@ -83,10 +219,11 @@ for $b \in U$, $\pi^{-1}(b) \subset \pi^{-1}(U)$, which is the region over which
 
 * Applications
 
+** The Poincare Lemma
+
 Let $M$ be a smooth manifold, consider the trivial fibre bundle $\pi : [0, 1] \times M \rightarrow M$. We have the maps $j_s : M \rightarrow [0, 1] \times M$ given by $j_s(p) = (s, p)$ for $s = 0, 1$.
-If $M$ is $n$ -dimensional, then $[0, 1] \times M$ is $(n + 1)$ -dimensional. Given some $(s, p) \in [0, 1] \times M$, we have coordinates $(U, \varphi) = (U, x^1, \dots, x^n)$ around $p$ in $M$, and global
-coordinate $t$ for $[0, 1]$, which we combine to form a chart $([0, 1] \times U, t, x^1 \circ \pi, \dots, x^n \circ \pi)$ around $(s, p)$. It follows that if $\alpha$ is a $(k + 1)$ -form on $[0, 1] \times M$,
-then inside $[0, 1] \times U$, it can be written as
+If $M$ is $n$ -dimensional, then $[0, 1] \times M$ is $(n + 1)$ -dimensional. Given some $(s, p) \in [0, 1] \times M$, we have coordinates $(U, \varphi) = (U, x^1, \dots, x^n)$ around $p$ in $M$, and global coordinate
+function $t$ on $[0, 1]$. It follows that if $\alpha$ is a $(k + 1)$ -form on $[0, 1] \times M$, then inside $[0, 1] \times U$, it can be written as
 
 \begin{equation}
 \alpha = \sum_{I} f_I(s, p) dt \wedge \pi^{*}( dx^{i_1} \wedge \cdots \wedge dx^{i_k}) + \sum_{J} g_J(s, p) \pi^{*}(dx^{j_1} \wedge \cdots \wedge dx^{j_{k + 1}})
@@ -125,3 +262,149 @@ g^{*} \circ f^{*} = (f \circ g)^{*} = (F \circ j_0)^{*} = (F \circ j_1)^{*} = \t
 
 Similarly, $f^{*} \circ g^{*} = \text{id}_M^{*}$. Thus, $f^{*} : H^k(N) \rightarrow H^k(M)$ is an isomorphism of cohomology groups, and we have the classic result of homotopy invariance of cohomology.
 This immediately implies the Poincare lemma, for example.
+
+** The Thom isomorphism
+
+Let us move on to another application: the fibre integral applied to real, oriented vector bundles. Clearly, if $\pi : E \rightarrow B$ is an oriented fibre bundle, then $\pi_{*}$ is an $\mathbb{R}$ -linear map
+$\pi_{*} : \Omega^k_{\text{vc}}(E) \rightarrow \Omega^{k - n}(B)$, where $\Omega_{\text{vc}}^k$ is the space of $k$ -forms with vertical compact support. In addition, note that $\pi_{*}$
+restricts to a map from $\Omega^k_{\text{c}}(E)$ to $\Omega_{\text{c}}^{k-n}(B)$.
+
+If we look at the particular case when
+$E$ is an oriented vector bundle, this simply means that locally, $E$ is of the form $U \times \mathbb{R}^n$. Of course, we can write down local coordinates for $E$ by combining local coordinates of $B$
+with the usual global coordinates of $\mathbb{R}^n$, which means that if $U \subset B$ is a neighbourhood that is trivialized by the vector bundle which admits coordinates $\varphi = (x^1, \dots, x^b)$,
+and $\Phi : \pi^{-1}(U) \rightarrow U \times \mathbb{R}^n$ is a diffeomorphism, then
+
+\begin{equation}
+(U \times \mathbb{R}^n, x^1 \circ \text{proj}_B \circ \Phi, \dots, x^b \circ \text{proj}_B \circ \Phi, t^1 \circ \text{proj}_{\mathbb{R}^n} \circ \Phi, \dots, t^n \circ \text{proj}_{\mathbb{R}^n} \circ \Phi) =
+(U \times \mathbb{R}^n, y^1, \dots, y^b, s^1, \dots, s^n)
+\end{equation}
+
+are coordinates for $E$.
+
+*Claim.* Let $E$ be an oriented vector bundle of dimension $n$ over $B$.
+The map $\pi_{*}$ from $\Omega^k_{\text{vc}}(E)$ to $\Omega^{k-n}(B)$ is a cochain map with respect to the graded differential $\alpha \mapsto (-1)^{|\alpha|} d\alpha$. In other words,
+$d \pi_{*} \alpha - (-1)^{n} \pi_{*} d \alpha = 0$.
+
+
+/Proof./ This proof follows similarly to the previous application, where we considered $E = [0, 1] \times M$. We can write any form $\alpha \in \Omega^k_{\text{vc}}(E)$, locally, as
+
+\begin{equation}
+\alpha = \sum_{IJ} f_{IJ}(s, p) \ ds^I \wedge dy^J
+\end{equation}
+
+so we have
+
+\begin{equation}
+\pi_{*} \alpha = \sum_{IJ, |I| = n} \left( \int_{\mathbb{R}^n} f_{IJ}(s, p) \ ds^I \right) dy^J
+\end{equation}
+
+where we are only summing over ascending tuples $I$ of length $n$ as all other terms are killed. This then means that
+
+\begin{equation}
+d \pi_{*} \alpha = \sum_{IJ, |I| = n, j} \left( \int_{\mathbb{R}^n} \frac{d f_{IJ}}{dy^j} \ ds^I \right) dy^j \wedge dy^J
+\end{equation}
+
+We also have
+
+\begin{equation}
+d\alpha = \sum_{IJ, i} \frac{d f_{IJ}}{d s^i} \ ds^i \wedge ds^I \wedge dy^J + \sum_{IJ, j} (-1)^{|I|} \frac{d f_{IJ}}{d y^j} \ ds^I \wedge dy^j \wedge dy^J
+\end{equation}
+
+and
+
+\begin{align}
+\pi_{*} d\alpha &= \sum_{IJ, |I| = n - 1, i} \left( \int_{\mathbb{R}^n} \frac{d f_{IJ}}{d s^i} \ ds^i \wedge ds^I \right) dy^J +
+\sum_{IJ, |I| = n, j} (-1)^{n} \left( \int_{\mathbb{R}^n} \frac{d f_{IJ}}{d y^j} \ ds^I \right) dy^j \wedge dy^J
+\\ &= (-1)^{n} \sum_{IJ, |I| = n, j} \left( \int_{\mathbb{R}^n} \frac{d f_{IJ}}{d y^j} \ ds^I \right) dy^j \wedge dy^J
+\end{align}
+
+From here, the claim immediately follows. $\blacksquare$
+
+We can also prove another useful result quite readily:
+
+*Lemma* (Projection formula). Let $\pi : E \rightarrow B$ be an oriented rank -$n$ vector bundle over $B$, $\tau$ a form on $B$, and $\omega$ a form on $E$ with compact vertical support.
+Then we have the formula
+
+\begin{equation}
+\pi_{*}(\omega \wedge \pi^{*} \tau) = \pi_{*} \omega \wedge \tau.
+\end{equation}
+
+In addition, if $B$ is oriented, note that $E$ is orientable as well (see the earlier discussion)
+This immediately gives an oriented atlas for $E$. If $\tau$ and $\omega$ are of the right order, and both have compact support, then we will have (using
+this inherited orientation on $E$):
+
+\begin{equation}
+\int_{E} \omega \wedge \pi^{*} \tau = \int_{B} \pi_{*} \omega \wedge \tau
+\end{equation}
+
+/Proof./ To prove the first formula, we can simply check that the formula holds locally. Thus, we can assume that our bundle is trivial, of the form $U \times \mathbb{R}^n$,
+with $U$ a coordinate chart with coordinates $x^1, \dots, x^b$. Let $t^1, \dots, t^n$ be global coordinates for $\mathbb{R}^n$. If $\sigma : U \times \mathbb{R}^n \rightarrow \mathbb{R}^n$
+is projection onto the fibre, then we have
+
+\begin{equation}
+\omega = \sum_{IJ} f_{IJ}(p, s) \sigma^{*} dt^I \wedge \pi^{*} dx^J \ \ \ \text{and} \ \ \ \tau = \sum_{I} g_{I}(p) dx^I
+\end{equation}
+
+which means that
+
+\begin{equation}
+\pi_{*}(\omega \wedge \pi^{*} \tau) = \pi_{*} \left( \sum_{IJK} f_{IJ}(p, s) g_K(p) \sigma^{*} dt^I \wedge \pi^{*}(dx^J \wedge dx^K) \right)
+= \sum_{IJK, |I| = n} \left( \int_{\mathbb{R}^n} f_{IJ}(p, s) \ ds^I \right) g_K(p) dx^J \wedge dx^K
+\end{equation}
+
+It is very easy to see that the right-hand side of this formula is also equal to $\pi_{*} \omega \wedge \tau$, when expressed in coordinates.
+
+To prove the second integration formula, note that
+
+\begin{align}
+\int_{B} \pi_{*} \omega \wedge \tau = \int_B \pi_{*} 
+\end{align}
+
+--------------
+
+Note that this result immediately gives us:
+
+*Lemma* (Poincare lemmas for compact support and compact vertical support).
+
+/Proof./ We will exhibit an isomorphism $H_{\text{cv}}^k(M \times \mathbb{R}^n) \simeq H_{\text{cv}}^{k - 1}(M \times \mathbb{R}^{n - 1})$. Clearly, $H_{\text{vc}}^k(M \times \mathbb{R}^{0}) = H^k(M)$,
+so we will eventually obtain $H_{\text{cv}}^k(M \times \mathbb{R}^n) \simeq H^{k - n}(M)$. Indeed, we can define the operator $K : \Omega_{\text{cv}}^k(M \times \mathbb{R}^n) \to \Omega_{\text{cv}}^{k-1}(M \times \mathbb{R}^{n-1})$
+as
+
+\begin{equation}
+K ( f(p, t) \ \sigma^{*} dt \wedge \pi^{*} \omega ) = \left( \int_{-\infty}^t f(p, s) \ ds - A(t) \int_{-\infty}^{\infty} f(p, s) \ ds \right) \omega \ \ \ \text{and} \ \ \ K( f(p, t) \eta ) = 0
+\end{equation}
+
+for $\omega \in \Omega_{\text{cv}}^{k - 1}(M \times \mathbb{R}^{n-1})$ and $\eta \in \Omega_{\text{cv}}^{k}(M \times \mathbb{R}^{n})$. In addition, we have $A(t) = \int_{-\infty}^t e(s) \ ds$
+where $e(s)$ is a compactly-supported function on $\mathbb{R}$ which integrates to $1$. Note that the integral over $f(p, s)$ is finite as $f$ restricted to some $p$ must have compact support.
+This map is well-defined, as is easy to verify. If we define a map $e_{*} : \Omega_{\text{cv}}^{k-1}(M \times \mathbb{R}^{n-1}) \to \Omega_{\text{cv}}^{k}(M \times \mathbb{R}^n)$ as
+\begin{equation}
+e_{*}(\omega) = e(t) \ \sigma^{*} dt \wedge \pi^{*} \omega
+\end{equation}
+the we immediately have from the projection formula
+\begin{equation}
+(\pi_{*} \circ e_{*})(\omega) = \pi_{*}(e(t) \ dt \wedge \pi^{*} \omega) = \omega.
+\end{equation}
+We can show that $1 - e_{*} \circ \pi_{*} = dK - Kd$, which implies that $\pi_{*}$ descends to an isomorphism of cohomology.
+
+------------
+
+*Definition.* Recall that a manifold $M$ is said to be of finite type if it admits a finite good cover. A good cover if a cover of a manifold
+for which all finite intersections are diffeomorphic to $\mathbb{R}^n$. One can quite easily show that any manifold has a good cover, and that
+any compact manifold is of finite type.
+
+We can now prove a more general result:
+
+*Theorem* (Thom isomorphism). Let $\pi : E \rightarrow B$ be an orientable rank -$n$ smooth vector bundle over $B$, a manifold of finite type. Then
+$H_{\text{cv}}^{k}(E)$ is isomorphic to $H^n(B)$. Moreover, this isomorphism restricts to an isomorphism of $H_{\text{c}}^k(E)$ and $H_{\text{c}}(B)$.
+
+/Proof./ 
+
+-----------------
+
+*Remark.* This seems like a good opportunity for me to opine on something important: the crucial difference between homology and cohomology is that homology /fundamentally/ deals
+with objects of compact support (finite sums of chains, each of which have compact support). On the other hand, a cochain in cohomology can act non-trivially on a collection of chains, the
+union of which /doesn't necessarily/ have compact support. It is for this reason that compact cohomology behaves like homology rather than the usual, non-compact cohomology.
+
+Alright, that's all. More posts coming soon.
+
+-----------------
